<resources>
    <string name="app_name">Calculator</string>
    <string name="dark">Dark Theme</string>
    <string name="white">White Theme</string>
    <string name="result">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="b9">9</string>
    <string name="b8">8</string>
    <string name="b7">7</string>
    <string name="b6">6</string>
    <string name="b5">5</string>
    <string name="b4">4</string>
    <string name="b3">3</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="clear">C</string>

    <string name="blue">Blue Equals Bar</string>
    <string name="green">Yellow Equals Bar</string>

    <string name="ui">Apply UI Changes</string>

</resources>
